--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.1.0",
     "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^16.14.0",
     "react-redux": "^6.0.0",
