--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "anonymous-online-store",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "engines": {
     "npm": "6.14.15",
-    "node": "14.18.0"
+    "node": "14.18.0",
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
