--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "anonymous-online-store",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001"
   "engines": {
     "npm": "6.14.15",
-    "node": "14.18.0",
+    "node": "14.18.0"
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
@@ -24,6 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server":"nodemon backend/server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
