--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "anonymous-online-store",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
   "engines": {
     "npm": "6.14.15",
     "node": "14.18.0"
