--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Hanbyul Park   Donika Morina   Jananaen Selvapaskaran   Kiet Do   Muhammad Umair Ahsan   Pui Hei Yan",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd backend && nodemon server.js",
+    "frontend": "cd frontend && npm start",
+    "backend": "cd backend && nodemon server.js",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "repository": {
