--- a/package.json
+++ b/package.json
@@ -18,5 +18,16 @@
   "bugs": {
     "url": "https://github.com/HAN-ARK/anonymous-online-store/issues"
   },
-  "homepage": "https://github.com/HAN-ARK/anonymous-online-store#readme"
+  "homepage": "https://github.com/HAN-ARK/anonymous-online-store#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security",
+    "GridFS": "^0.3.0",
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^6.0.13",
+    "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.2"
+  }
 }
