--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gridfs-stream": "^1.1.1",
     "mongoose": "^6.0.13",
     "multer": "^1.4.3",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemon": "^2.0.15"
   }
 }
