--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "node": "14.18.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
