--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,11 @@
     "redux": "^4.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "server":"nodemon backend/server.js",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "cd ./backend/ && npm install && node server.js",
+    "heroku-postbuild": "cd ./frontend/ && npm install && npm run build",
+    "backend": "cd ./backend/ && nodemon server.js ",
+    "frontend": "cd ./frontend/ && yarn run start",
+    "test":"cd ./frontend/ && npm run test"
   },
   "eslintConfig": {
     "extends": "react-app"
