--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "anonymous-online-store",
   "version": "0.1.0",
-  "proxy": "http://localhost:80",
   "private": true,
   "engines": {
     "npm": "6.14.15",
@@ -22,11 +21,10 @@
     "redux": "^4.0.1"
   },
   "scripts": {
-    "start": "cd ./backend/ && npm install && node server.js",
-    "heroku-postbuild": "cd ./frontend/ && npm install && npm run build",
-    "backend": "cd ./backend/ && nodemon server.js ",
-    "frontend": "cd ./frontend/ && yarn run start",
-    "test":"cd ./frontend/ && npm run test"
+    "start": " set PORT=3001 && react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
